--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,6 +1,6 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
+  /* padding: 0 0.5rem; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,22 +17,38 @@
 }
 
 .footer {
+  background-color: #3d5a80;
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+  color: #e0fbfc;
 }
 
 .footer img {
   margin-left: 0.5rem;
 }
 
-.footer a {
+/* .footer a {
   display: flex;
   justify-content: center;
   align-items: center;
+} */
+
+.socialFooter {
+  display: flex;
+}
+
+.socialFooter a {
+  margin: 0 5px;
+  /* border: 1px solid ; */
+}
+
+.socialFooter p {
+  margin: 0 5px;
+  /* font-size: 20px; */
 }
 
 .title a {
