--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,7 @@
 }
 
 .main {
-  padding: 5rem 0;
+  /* padding: 5rem 0; */
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -17,14 +17,14 @@
 }
 
 .footer {
-  background-color: #3d5a80;
+  background-color: #001632;
   width: 100%;
   height: 100px;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  color: #e0fbfc;
+  color: #fff;
 }
 
 .footer img {
@@ -134,5 +134,9 @@
   .grid {
     width: 100%;
     flex-direction: column;
+  }
+  .footer {
+    justify-content: space-between;
+    padding: 0 0.7rem;
   }
 }
