--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -1,20 +1,19 @@
 .headerWrapper {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   position: fixed;
   z-index: 12;
   height: 4rem;
   top: 0;
   /* padding: 0 2rem; */
-  color: #293241;
+  /* color: #293241; */
+  /* color: #3d5a80; */
+  color: #1d2278;
   background-color: #fff;
   width: 100vw;
   border-width: 0px 0px 1px;
   border-style: solid;
   border-bottom-color: #eaeaea;
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 500ms;
 }
 .headerContainer {
   width: 90vw;
@@ -26,8 +25,14 @@
 .logoWrapper {
   display: flex;
 }
+.logoWrapper a {
+  display: flex;
+}
 .navSection {
   display: flex;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
 }
 .ulStyle {
   display: flex;
@@ -36,17 +41,76 @@
   align-items: center;
 }
 .ulStyle li {
-  margin-left: 1rem;
+  margin-left: 5px;
 }
-.menuButton {
+.articles {
+  border: 2px solid #1d2278;
+  border-radius: 50px;
+  padding: 2px 6px;
+}
+.about {
+  border: 2px solid #1d2278;
+  background-color: #1d2278;
+  color: #fff;
+  border-radius: 50px;
+  padding: 2px 6px;
+}
+.menuButton,
+.headerModal button,
+.closeHeaderModal button {
+  display: none;
   border: none;
   padding: 0;
   background-color: #fff;
   cursor: pointer;
-  color: #293241;
+  /* color: #3d5a80; */
+  color: #1d2278;
+  margin-left: auto;
+  margin-right: 10px;
+  /* color: #293241; */
 }
-.menuButton i:hover {
-  color: #293241;
+.menuButton i {
+  font-size: 30px;
+}
+.menuButton i:hover,
+.headerModal i:hover {
+  color: #3d5a80;
+}
+.headerModal {
+  position: absolute;
+  width: 14rem;
+  z-index: 100;
+  background-color: #fff;
+  right: 0;
+  top: 0.5rem;
+  border: 1px solid #eaeaea;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  transform: translateX(0px);
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+}
+.closeHeaderModal {
+  position: absolute;
+  width: 18rem;
+  z-index: 100;
+  right: 0;
+  top: 0.5rem;
+  transition-property: all;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 500ms;
+  transform: translateX(300px);
+}
+.mobileMenu ul {
+  list-style: none;
+  font-size: 20px;
+}
+.mobileMenu li {
+  margin-bottom: 2rem;
+  border-bottom: 1px solid #eaeaea;
 }
 
 @media (max-width: 600px) {
@@ -56,5 +120,13 @@
   .headerContainer {
     width: 100vw;
     padding: 0;
+  }
+  .menuButton,
+  .headerModal button,
+  .closeHeaderModal button {
+    display: block;
+  }
+  .navSection {
+    display: none;
   }
 }
