--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -39,7 +39,9 @@
   /* font-size: 20px; */
 }
 .footerContainer {
-  width: 90vw;
+  /* width: 90vw; */
+  width: 100%;
+  max-width: 1200px;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
