--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -8,26 +8,38 @@
   /* padding: 0 2rem; */
   /* color: #293241; */
   /* color: #3d5a80; */
-  color: #1d2278;
-  background-color: #fff;
+  /* color: #1d2278; */
+  color: #fff;
+  /* background-color: #fff; */
+  /* background: linear-gradient(
+    90deg,
+    rgba(23, 79, 119, 1) 0%,
+    rgba(61, 106, 141, 1) 65%
+  ); */
+  background-color: #356488;
   width: 100vw;
-  border-width: 0px 0px 1px;
+  /* border-width: 0px 0px 1px;
   border-style: solid;
-  border-bottom-color: #eaeaea;
+  border-bottom-color: #eaeaea; */
 }
 .headerContainer {
-  width: 90vw;
+  /* width: 90vw; */
+  width: 100%;
+  max-width: 1200px;
   display: flex;
   justify-content: space-between;
   margin: 0 auto;
   padding: 0 4rem;
 }
-.logoWrapper {
+:is(.logoWrapper, .logoWrapper a) {
+  display: flex;
+}
+/* .logoWrapper {
   display: flex;
 }
 .logoWrapper a {
   display: flex;
-}
+} */
 .navSection {
   display: flex;
   font-size: 20px;
@@ -41,17 +53,17 @@
   align-items: center;
 }
 .ulStyle li {
-  margin-left: 5px;
+  margin-left: 30px;
 }
 .articles {
-  border: 2px solid #1d2278;
+  border: 2px solid #fff;
   border-radius: 50px;
   padding: 2px 6px;
 }
 .about {
-  border: 2px solid #1d2278;
-  background-color: #1d2278;
-  color: #fff;
+  border: 2px solid #fff;
+  background-color: #fff;
+  color: #3d6a8d;
   border-radius: 50px;
   padding: 2px 6px;
 }
@@ -61,10 +73,12 @@
   display: none;
   border: none;
   padding: 0;
-  background-color: #fff;
+  /* background-color: #fff; */
+  background-color: #356488;
   cursor: pointer;
   /* color: #3d5a80; */
-  color: #1d2278;
+  /* color: #1d2278; */
+  color: #fff;
   margin-left: auto;
   margin-right: 10px;
   /* color: #293241; */
@@ -72,18 +86,23 @@
 .menuButton i {
   font-size: 30px;
 }
-.menuButton i:hover,
-.headerModal i:hover {
-  color: #3d5a80;
+:is(.menuButton, .headerModal) i:hover {
+  color: #fff;
+}
+.headerModal button {
+  color: #356488;
+  background-color: #fff;
 }
 .headerModal {
   position: absolute;
   width: 14rem;
   z-index: 100;
+  color: #356488;
   background-color: #fff;
   right: 0;
   top: 0.5rem;
   border: 1px solid #eaeaea;
+  border-right: unset;
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
   transform: translateX(0px);
