--- a/components/hero/hero.module.css
+++ b/components/hero/hero.module.css
@@ -1,26 +1,87 @@
 .heroWrapper {
   /* background-image: url('/images/coding.png'); */
   /* background-color: #001632; */
-  background: linear-gradient(
+  /* background: linear-gradient(
     90deg,
     rgba(23, 79, 119, 1) 0%,
     rgba(61, 106, 141, 1) 65%
-  );
+  ); */
+  /* background-color: #356488; */
+  /* -webkit-mask: radial-gradient(
+        var(--r1, 160%) var(--r2, 68.15%) at top,
+        white 79.5%,
+        transparent 80%
+      )
+      top left,
+    radial-gradient(
+        var(--r1, 160%) var(--r2, 68.15%) at bottom,
+        transparent 79.5%,
+        white 80%
+      )
+      top center,
+    radial-gradient(
+        var(--r1, 160%) var(--r2, 68.15%) at top,
+        white 79.5%,
+        transparent 80%
+      )
+      top right;
+  mask: radial-gradient(
+        var(--r1, 160%) var(--r2, 68.15%) at top,
+        white 79.5%,
+        transparent 80%
+      )
+      top left,
+    radial-gradient(
+        var(--r1, 60%) var(--r2, 8.15%) at bottom,
+        transparent 79.5%,
+        white 80%
+      )
+      top center,
+    radial-gradient(
+        var(--r1, 160%) var(--r2, 68.15%) at top,
+        white 79.5%,
+        transparent 80%
+      )
+      top right;
+  -webkit-mask-size: 33.37% 140%;
+  -webkit-mask-repeat: no-repeat;
+  mask-size: 33.37% 140%;
+  mask-repeat: no-repeat; */
+  /* clip-path: circle(180vh at 50% -80vh); */
+  /* border-bottom-left-radius: 50% 20%;
+  border-bottom-right-radius: 50% 20%; */
   color: #fff;
-  display: flex;
+  /* display: flex; */
   /* margin-top: 4rem; */
-  padding-bottom: 1rem;
+  /* padding-bottom: 1rem; */
   width: 100vw;
-  /* height: 24rem; */
+  /* min-height: 27rem; */
+}
+.heroWrapper svg {
+  /* position: absolute; */
+  /* bottom: 0; */
+  /* top: 26rem; */
+  width: 100%;
+  height: 120px;
 }
 .heroContainer {
-  display: flex;
-  flex-wrap: wrap;
-  width: 90vw;
-  justify-content: space-between;
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  /* width: 90vw; */
+  background-color: #356488;
+  width: 100%;
+  /* max-width: 1200px; */
+  /* justify-content: space-between; */
   /* padding: 0 5rem; */
   /* max-width: 800px; */
+}
+.heroContent {
+  display: flex;
+  flex-wrap: wrap;
   margin: 0 auto;
+  max-width: 1200px;
+  justify-content: space-between;
+  width: 100%;
 }
 .heroImageContainer,
 .heroTitles {
@@ -69,6 +130,12 @@
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
 @media (max-width: 600px) {
+  .heroWrapper {
+    /* -webkit-mask-size: 33.37% 183%;
+    mask-size: 33.37% 140%; */
+    /* border-bottom-left-radius: 50% 10%;
+    border-bottom-right-radius: 50% 10%; */
+  }
   .heroTitles {
     padding: 0;
   }
