--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -67,9 +67,7 @@
   border-radius: 50px;
   padding: 2px 6px;
 }
-.menuButton,
-.headerModal button,
-.closeHeaderModal button {
+.menuButton {
   display: none;
   border: none;
   padding: 0;
@@ -89,7 +87,14 @@
 :is(.menuButton, .headerModal) i:hover {
   color: #fff;
 }
-.headerModal button {
+.headerModal button,
+.closeHeaderModal button {
+  display: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: 10px;
   color: #356488;
   background-color: #fff;
 }
@@ -131,14 +136,23 @@
   margin-bottom: 2rem;
   border-bottom: 1px solid #eaeaea;
 }
+.modalBackground {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.closeModalBackground {
+  display: none;
+}
 
 @media (max-width: 600px) {
-  .headerWrapper {
+  /* .headerWrapper {
     padding: 0 0.5rem;
-  }
+  } */
   .headerContainer {
     width: 100vw;
-    padding: 0;
+    padding: 0 0.5rem;
   }
   .menuButton,
   .headerModal button,
